Bug:  PRD Reviewer:  Self Comments:  Changes for Neutron integration.  {388th} 1. Changed the find control tree browser to use a fixed height and width    with overflow auto set (i.e., it's its own scrollable region.)
Files:
M    gwt/src/org/kablink/teaming/gwt/client/widgets/FindControlBrowserPopup.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -5272,8 +5272,9 @@ td.datePickerMonth {
 		-moz-border-radius: 5px;
 		-webkit-border-radius: 5px;
 	}
-	.vibe-findBrowser-popup {z-index: 1002; padding: 2px !important;}
-	.vibe-findBrowser-tree  {
+	.vibe-findBrowser-popup       {z-index: 1002; padding: 2px !important;}
+	.vibe-findBrowser-scrollPanel {width: 600px; height: 350px; overflow: auto;}
+	.vibe-findBrowser-tree        {
 		background-color: #f6f6f6;
 		margin: 0px;
 		padding-right: 5px;
